# ndelement

./: .gitignore  Cargo.toml  LICENSE  README.md  RELEASE.md  build.rs  cbindgen.toml  pyproject.toml
.github/workflows/: docs.yml  python-package.yml  release.yml  run-tests.yml  run-tests.yml.bak  run-weekly-tests.yml  style-checks.yml  style-checks.yml.bak
examples/: element_family.rs  lagrange_element.rs  test_high_degree.rs
ndelement-macros/: Cargo.toml  README.md
ndelement-macros/src/: lib.rs
python/docs/: conf.py  index.rst
python/ndelement/: __init__.py  ciarlet.py  polynomials.py  quadrature.py  reference_cell.py
python/test/: test_element.py  test_polynomials.py  test_reference_cell.py
src/: bindings.rs  ciarlet.rs  lib.rs  map.rs  math.rs  orientation.rs  polynomials.rs  quadrature.rs  reference_cell.rs  traits.rs  types.rs  utils.rs
src/ciarlet/: lagrange.rs  nedelec.rs  raviart_thomas.rs
src/polynomials/: legendre.rs
src/quadrature/: gauss_jacobi.rs  gl.rs  gll.rs  simplex_rules.rs
src/traits/: element.rs
