[features]
mpi = ["dep:mpi"]
serde = ["dep:serde"]
strict = []
default = []

[package]
name = "ndelement"
version = "0.3.0"
edition = "2021"
authors = ["Matthew Scroggs <rust@mscroggs.co.uk>"]
description = "n-dimensional finite element definition library."
license = "BSD-3-Clause"
homepage = "https://github.com/bempp/ndelement"
repository = "https://github.com/bempp/ndelement"
readme = "README.md"
keywords = ["numerics"]
categories = ["mathematics", "science"]

[lib]
name = "ndelement"
crate-type = ["lib", "cdylib"]

[dependencies]
bempp-quadrature = { version = "0.1.0" }
itertools = "0.14.*"
mpi = { version = "0.8.*", optional = true }
num = "0.4"
rlst = { version = "0.2" }
serde = { version = "1", features = ["derive"], optional = true }
strum = "0.27"
strum_macros = "0.27"
c-api-tools = { version = "0.1.0" }

[dev-dependencies]
paste = "1.*"
approx = "0.5"

[build-dependencies]
cbindgen = "0.29.*"

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[lints.clippy]
wildcard_imports = "forbid"
