[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "ndelement"
version = "0.1.1"
description = "n-dimensional finite element definition library."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    {name = "Matthew Scroggs", email = "rust@mscroggs.co.uk"}
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "maturin>=1.7",
    "numpy",
    "cffi",
    'patchelf; platform_system == "Linux"',
]
packages = ["ndelement"]

[project.urls]
homepage = "https://github.com/bempp/ndelement"
repository = "https://github.com/bempp/ndelement"

[tool.maturin]
python-source = "python"
module-name = "ndelement._ndelementrs"
cargo-extra-args = '--features "serde,python"'

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
ignore_missing_imports = true
