[features]
strict = []

[package]
name = "ndelement-macros"
version = "0.1.3-dev"
edition = "2021"
authors = [
    "Matthew Scroggs <rust@mscroggs.co.uk>",
    "Timo Betcke <timo.betcke@gmail.com>",
]
description = "Proc macros for the ndelement crate."
license = "BSD-3-Clause"
homepage = "https://github.com/bempp/ndelement"
repository = "https://github.com/bempp/ndelement"
readme = "README.md"
keywords = ["numerics"]
categories = ["mathematics", "science"]

[lib]
name = "ndelement_macros"
proc-macro = true

[dependencies]
syn = "2.0"
proc-macro2 = "1.0"
darling = "0.20"
quote = "1.0"
itertools = "0.13"
